# utild

./: .clang-format  meson.build  readme.md
.github/: build.yml
.github/workflows/: build.yml
src/: main.cpp  meson.build  version.h.in
src/lipc/: HashHandler.h  IHandler.h  IntHandler.h  StringHandler.h
